--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -60,7 +60,7 @@
 										<span class="date">Décembre, 2023</span>
 										<h2>Système solaire</h2>
 									</header>
-									<a href="project/Solar system ( sun, earth and moon)/index.html" class="image fit" target="_blank"><img src="images/img2.png" alt="" /></a>
+									<a href="https://github.com/YoussoufElisa/Solar-system---sun--earth-and-moon-/tree/main/Solar%20system%20(%20sun%2C%20earth%20and%20moon)" target="_blank"><img src="images/img2.png" alt="" /></a>
 									<p>Reproduction simplifié du système solaire en HTML et CSS (soleil, terre et lune).</p>
 									<ul class="actions special">
 										<li><a href="https://github.com/YoussoufElisa/Solar-system---sun--earth-and-moon-/tree/main/Solar%20system%20(%20sun%2C%20earth%20and%20moon)" class="button" target="_blank">Voir le code</a></li>
