--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -34,6 +34,7 @@
 					<nav id="nav">
 						<ul class="links">
 							<li class="active"><a href="index.html">Portfolio</a></li>
+							<li><a href="apropos.html">A propos</a></li>
 			
 					</nav>
 
@@ -60,7 +61,7 @@
 										<span class="date">Décembre, 2023</span>
 										<h2>Système solaire</h2>
 									</header>
-									<a href="project/Solar system ( sun, earth and moon)/index.html" target="_blank"><img src="images/img2.png" alt="" /></a>
+									<a href="project/Solar system ( sun, earth and moon)/index.html" class="image fit" target="_blank"><img src="images/img2.png" alt="" /></a>
 									<p>Reproduction simplifié du système solaire en HTML et CSS (soleil, terre et lune).</p>
 									<ul class="actions special">
 										<li><a href="https://github.com/YoussoufElisa/Solar-system---sun--earth-and-moon-/tree/main/Solar%20system%20(%20sun%2C%20earth%20and%20moon)" class="button" target="_blank">Voir le code</a></li>
@@ -85,7 +86,7 @@
 				<!-- Footer -->
 					<footer id="footer">
 						<section>
-							<form method="post" action="#">
+							<form method="post" action="assets/php/traitement.php">
 								<div class="fields">
 									<div class="field">
 										<label for="name">Nom</label>
@@ -104,6 +105,7 @@
 									<li><input type="submit" value="Envoyer" /></li>
 								</ul>
 							</form>
+							
 						</section>
 						<section class="split contact">
 
