--- a/Portfolio/apropos.html
+++ b/Portfolio/apropos.html
@@ -16,12 +16,14 @@
 
 		<!-- Wrapper -->
 			<div id="wrapper">
-
+				<header id="header">
+						<h1>À propos</h1>
+					</header>
 				<!-- Nav -->
 					<nav id="nav">
 						<ul class="links">
 							<li><a href="index.html">Portfolio</a></li>
-							<li class="active"><a href="generic.html">A propos</a></li>
+							<li class="active"><a href="generic.html">À propos</a></li>
 						</ul>
 					</nav>
 
