--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -34,7 +34,7 @@
 					<nav id="nav">
 						<ul class="links">
 							<li class="active"><a href="index.html">Portfolio</a></li>
-							<li><a href="apropos.html">A propos</a></li>
+							<li><a href="apropos.html">À propos</a></li>
 			
 					</nav>
 
