--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -34,7 +34,7 @@
 					<nav id="nav">
 						<ul class="links">
 							<li class="active"><a href="index.html">Portfolio</a></li>
-							<li><a href="apropos.html">À propos</a></li>
+							<li><a href="apropos.html">A propos</a></li>
 			
 					</nav>
 
@@ -73,9 +73,40 @@
 										<h2>Light/dark mode button</h2>
 									</header>
 									<a href="project/LightDark Mode 1/dark mode switch bouton/index.html" class="image fit" target="_blank"><img src="images/img3.png" alt="" /></a>
-									<p>Un bouton qui change le theme de couleur d'une page web.</p>
 									<ul class="actions special">
 										<li><a href="https://github.com/YoussoufElisa/LightDark-Mode-1/tree/main/LightDark%20Mode%201/dark%20mode%20switch%20bouton" class="button" target="_blank">Voir le code</a></li>
+									</ul>
+								</article>
+								<article>
+									<header>
+										<span class="date">Avril 2024</span>
+										<h2>Horlogue Digital</h2>
+									</header>
+									<a href="project/Horlogue Digital/index.html" class="image fit" target="_blank"><img src="images/img4.png" alt="Image d'une horlogue digital"></a>
+									<ul class="actions special">
+										<li><a href="https://github.com/YoussoufElisa/Horlogue-Digital" class="button" target="_blank">Voir le code</a></li>
+									</ul>
+								</article>
+								<article>
+									<header>
+										<span class="date">Mars 2024</span>
+										<h2>Wireframe du site batipole (Avec figma)</h2>
+									</header>
+									<a href="" class="image fit" target="_blank"></a>
+									<p>Le Wireframe du Site Batipole à reproduire</p>
+									<ul class="actions special">
+										<li><a href="#" class="button" target="_blank">Voir le code</a></li>
+									</ul>
+								</article>
+								<article>
+									<header>
+										<span class="date">Mars 2024</span>
+										<h2>Site batipole</h2>
+									</header>
+									<a href="" class="image fit" target="_blank"></a>
+									<p>Tp réalisé en formation. Reproduction du site internet de Batipole, (Centre de formation en limouxin.)</p>
+									<ul class="actions special">
+										<li><a href="#" class="button" target="_blank">Voir le code</a></li>
 									</ul>
 								</article>
 							<p>Et d'autres projet en cours...</p>
