--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -149,11 +149,10 @@
 								<p><a href="#">youssoufelisa1106@gmail.com</a></p>
 							</section>
 							<section>
-								<!--<h3>Réseaux sociaux</h3>
+								<h3>Réseaux sociaux</h3>
 								<ul class="icons alt">
-									<li><a href="#" class="icon brands alt fa-linkedin"><span class="label">Linkedin</span></a></li>
-									<li><a href="#" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
-								</ul>-->
+									<li><a href="https://github.com/YoussoufElisa" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
+								</ul>
 							</section>
 						</section>
 					</footer>
