--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -46,7 +46,7 @@
 								<header class="major">
 									<span class="date">Août 2023</span>
 									<h2>Site web</h2>
-									<p>Exemple de site web,effectué lors d'un travail de groupe, dans le centre de formation de l'Addrar à Ramonville</p>
+									<p>Exemple de site web,effectué lors d'un tp de groupe, dans le centre de formation de l'Addrar à Ramonville</p>
 								</header>
 								<a href="project/PROJET-GROUPE/index.html" class="image main" target="_blank"><img src="images/img1.png" alt="" /></a>
 								<ul class="actions special">
@@ -90,23 +90,12 @@
 								<article>
 									<header>
 										<span class="date">Mars 2024</span>
-										<h2>Wireframe du site batipole (Avec figma)</h2>
-									</header>
-									<a href="" class="image fit" target="_blank"></a>
-									<p>Le Wireframe du Site Batipole à reproduire</p>
-									<ul class="actions special">
-										<li><a href="#" class="button" target="_blank">Voir le code</a></li>
-									</ul>
-								</article>
-								<article>
-									<header>
-										<span class="date">Mars 2024</span>
 										<h2>Site batipole</h2>
 									</header>
-									<a href="" class="image fit" target="_blank"></a>
-									<p>Tp réalisé en formation. Reproduction du site internet de Batipole, (Centre de formation en limouxin.)</p>
+									<a href="project/site_batipole/index.html" class="image fit" target="_blank"><img src="images/img5.png" alt="Image du site internet du batipole"></a>
+									<p>Tp réalisé en formation. Reproduction du site internet du Batipole, (Centre de formation en limouxin.)</p>
 									<ul class="actions special">
-										<li><a href="#" class="button" target="_blank">Voir le code</a></li>
+										<li><a href="https://github.com/YoussoufElisa/integration_batipole" class="button" target="_blank">Voir le code</a></li>
 									</ul>
 								</article>
 							<p>Et d'autres projet en cours...</p>
@@ -151,7 +140,8 @@
 							<section>
 								<h3>Réseaux sociaux</h3>
 								<ul class="icons alt">
-									<li><a href="https://github.com/YoussoufElisa" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
+									<!--<li><a href="#" class="icon brands alt fa-linkedin"><span class="label">Linkedin</span></a></li>-->
+									<li><a href="https://github.com/YoussoufElisa" class="icon brands alt fa-github" target="_blank" ><span class="label">GitHub</span></a></li>
 								</ul>
 							</section>
 						</section>
