--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -46,7 +46,7 @@
 								<header class="major">
 									<span class="date">Août 2023</span>
 									<h2>Site web</h2>
-									<p>Exemple de site web,effectué lors d'un tp de groupe, dans le centre de formation de l'Addrar à Ramonville</p>
+									<p>Site web simple, effectué lors d'un tp de groupe, dans le centre de formation de l'Addrar à Ramonville.</p>
 								</header>
 								<a href="project/PROJET-GROUPE/index.html" class="image main" target="_blank"><img src="images/img1.png" alt="" /></a>
 								<ul class="actions special">
@@ -93,7 +93,7 @@
 										<h2>Site batipole</h2>
 									</header>
 									<a href="project/site_batipole/index.html" class="image fit" target="_blank"><img src="images/img5.png" alt="Image du site internet du batipole"></a>
-									<p>Tp réalisé en formation. Reproduction du site internet du Batipole, (Centre de formation en limouxin.)</p>
+									<p>Tp réalisé en formation. Reproduction du site internet du Batipole, (Centre de formation en limouxin).</p>
 									<ul class="actions special">
 										<li><a href="https://github.com/YoussoufElisa/integration_batipole" class="button" target="_blank">Voir le code</a></li>
 									</ul>
