--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -34,19 +34,17 @@
 					<nav id="nav">
 						<ul class="links">
 							<li class="active"><a href="index.html">Portfolio</a></li>
-							<li><a href="apropos.html">A propos</a></li>
-			
+							<li><a href="apropos.html">À propos</a></li>
 					</nav>
 
 				<!-- Main -->
 					<div id="main">
-
 						<!-- Featured Post -->
 							<article class="post featured">
 								<header class="major">
 									<span class="date">Août 2023</span>
 									<h2>Site web</h2>
-									<p>Site web simple, effectué lors d'un tp de groupe, dans le centre de formation de l'Addrar à Ramonville.</p>
+									<p>Un site web simple, réalisé lors d'un TP de groupe, au centre de formation de l'Adrar à Ramonville.</p>
 								</header>
 								<a href="project/PROJET-GROUPE/index.html" class="image main" target="_blank"><img src="images/img1.png" alt="" /></a>
 								<ul class="actions special">
@@ -62,7 +60,7 @@
 										<h2>Système solaire</h2>
 									</header>
 									<a href="project/Solar system ( sun, earth and moon)/index.html" class="image fit" target="_blank"><img src="images/img2.png" alt="" /></a>
-									<p>Reproduction simplifié du système solaire en HTML et CSS (soleil, terre et lune).</p>
+									<p>Reproduction simplifiée du système solaire en HTML et CSS (Soleil, Terre et Lune).</p>
 									<ul class="actions special">
 										<li><a href="https://github.com/YoussoufElisa/Solar-system---sun--earth-and-moon-/tree/main/Solar%20system%20(%20sun%2C%20earth%20and%20moon)" class="button" target="_blank">Voir le code</a></li>
 									</ul>
@@ -93,12 +91,12 @@
 										<h2>Site batipole</h2>
 									</header>
 									<a href="project/site_batipole/index.html" class="image fit" target="_blank"><img src="images/img5.png" alt="Image du site internet du batipole"></a>
-									<p>Tp réalisé en formation. Reproduction du site internet du Batipole, (Centre de formation en limouxin).</p>
+									<p>TP réalisé en formation. Reproduction du site internet du Batipole (centre de formation en Limouxin).</p>
 									<ul class="actions special">
 										<li><a href="https://github.com/YoussoufElisa/integration_batipole" class="button" target="_blank">Voir le code</a></li>
 									</ul>
 								</article>
-							<p>Et d'autres projet en cours...</p>
+							<p>Et d'autres projets en cours...</p>
 							</section>
 
 					</div>
@@ -135,7 +133,7 @@
 							</section>
 							<section>
 								<h3>Email</h3>
-								<p><a href="#">youssoufelisa1106@gmail.com</a></p>
+								<p><a href="mailto:youssoufelisa1106@gmail.com">youssoufelisa1106@gmail.com</a></p>
 							</section>
 							<section>
 								<h3>Réseaux sociaux</h3>
