--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -78,9 +78,9 @@
 								<article>
 									<header>
 										<span class="date">Avril 2024</span>
-										<h2>Horlogue Digital</h2>
+										<h2>Horloge Digital</h2>
 									</header>
-									<a href="project/Horlogue Digital/index.html" class="image fit" target="_blank"><img src="images/img4.png" alt="Image d'une horlogue digital"></a>
+									<a href="project/Horloge Digital/index.html" class="image fit" target="_blank"><img src="images/img4.png" alt="Image d'une horloge digital"></a>
 									<ul class="actions special">
 										<li><a href="https://github.com/YoussoufElisa/Horlogue-Digital" class="button" target="_blank">Voir le code</a></li>
 									</ul>
