--- a/Portfolio/index.html
+++ b/Portfolio/index.html
@@ -48,7 +48,7 @@
 								</header>
 								<a href="project/PROJET-GROUPE/index.html" class="image main" target="_blank"><img src="images/img1.png" alt="" /></a>
 								<ul class="actions special">
-									<li><a href="https://github.com/YoussoufElisa/Projet-de-groupe-Adrar" class="button large" target="_blank">Voir le code</a></li>
+									<li><a href="https://github.com/YoussoufElisa/youssoufelisa.github.io/tree/main/Portfolio/project/PROJET-GROUPE" class="button large" target="_blank">Voir le code</a></li>
 								</ul>
 							</article>
 
